@@ -43,6 +43,8 @@ S3method(attrassign, lm)
 S3method(extractAIC,coxph.penal)
 S3method(lines, aareg)
 S3method(lines, survfit)
+S3method(model.frame, coxph)
+S3method(model.matrix, coxph)
 S3method(plot, aareg)
 S3method(plot, cox.zph)
 S3method(plot, survfit)
