@@ -1,5 +1,5 @@
-/* $Id: agmart2.c 11080 2008-10-24 03:47:51Z therneau $
-/*
+/* $Id: agmart2.c 11357 2009-09-04 15:22:46Z therneau $
+**
 ** Compute the martingale residual for a counting process model
 **
 ** Input
