@@ -1,5 +1,5 @@
-/* $Id: cholesky2.c 11080 2008-10-24 03:47:51Z therneau $
-/*
+/* $Id: cholesky2.c 11357 2009-09-04 15:22:46Z therneau $
+**
 ** subroutine to do Cholesky decompostion on a matrix: C = FDF'
 **   where F is lower triangular with 1's on the diagonal, and D is diagonal
 **
