@@ -1,0 +1,56 @@
+
+R version 2.10.0 Under development (unstable) (--)
+Copyright (C)  The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> options(na.action=na.exclude) # preserve missings
+> options(contrasts=c('contr.treatment', 'contr.poly')) #ensure constrast type
+> library(survival)
+Loading required package: splines
+> 
+> #
+> # Test out the revised model.matrix code
+> #
+> test1 <- data.frame(time=  c(9, 3,1,1,6,6,8),
++                     status=c(1,NA,1,0,1,1,0),
++                     x=     c(0, 2,1,1,1,0,0),
++                     z= factor(c('a', 'a', 'b', 'b', 'c', 'c', 'a')))
+> 
+> fit1 <- coxph(Surv(time, status) ~ z, test1)
+Warning message:
+In fitter(X, Y, strats, offset, init, control, weights = weights,  :
+  Ran out of iterations and did not converge
+> fit2 <- coxph(Surv(time, status) ~z, test1, x=T)
+Warning message:
+In fitter(X, Y, strats, offset, init, control, weights = weights,  :
+  Ran out of iterations and did not converge
+> all.equal(model.matrix(fit1), fit2$x)
+[1] TRUE
+> 
+> test2 <- data.frame(time=  c(9, 3,1,1,6,6,8),
++                     status=c(1,NA,1,0,1,1,0),
++                     x=     c(0, 2,1,1,1,0,0),
++                     z= factor(c('a', 'a', 'a', 'a', 'c', 'c', 'a')))
+> 
+> ftest <- model.frame(fit1, data=test2)
+> all.equal(levels(ftest$z), levels(test1$z))
+[1] TRUE
+> 
+> xtest <- model.matrix(fit1, data=test2)
+> dummy <- fit2$x
+> dummy[,1] <- 0
+> all.equal(xtest, dummy)
+[1] TRUE
+> 
